require-ns-purpose-label.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ns-purpose-label
spec:
  validationFailureAction: enforce
  rules:
  - name: require-ns-purpose-label
    match:
      resources:
        kinds:
        - Namespace
    validate:
      message: "A namespace must have a 'purpose' label."
      pattern:
        metadata:
          labels:
            purpose: "?*"
